[workspace]
members = [
    'node',
    'runtime',
    # 'pallets/compose/common',
    # 'pallets/compose/register',
    # 'pallets/compose/rpc',
    # 'pallets/compose/rpc/runtime-api',
    ### RPC REQUIRED ###
    'pallets/compose',
    'pallets/compose/primitives',
    'pallets/compose/rpc',
    'pallets/merkle-mountain-range',
    'pallets/merkle-mountain-range/primitives',
    'pallets/merkle-mountain-range/rpc',
    'pallets/generic-pallet-v1',
]
[profile.release]
panic = 'unwind'
