[workspace]
members = [
    'node',
    'runtime',
    ### RPC REQUIRED ###
    'pallets/compose',
    'pallets/compose/primitives',
    'pallets/compose/rpc',
    'pallets/merkle-mountain-range',
    'pallets/merkle-mountain-range/primitives',
    'pallets/merkle-mountain-range/rpc',
    'pallets/generic-pallet-v1',
]
[profile.release]
panic = 'unwind'
