[package]
name = "pallet-mmr"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME Merkle Mountain Range pallet."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking", default-features = false, optional = true }
# frame-benchmarking = { version = "3.1.0", default-features = false, path = "../benchmarking", optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
# frame-support = { version = "3.0.0", default-features = false } #, path = "../support" }
frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
# frame-system = { version = "3.0.0", default-features = false } #, path = "../system" }
mmr-lib = { package = "ckb-merkle-mountain-range", default-features = false, version = "0.3.1" }
pallet-mmr-primitives = { version = "3.0.0", default-features = false, path = "./primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
# sp-core = { version = "3.0.0", default-features = false } #, path = "../../primitives/core" }
sp-io = { git = "https://github.com/paritytech/substrate", package = "sp-io", default-features = false }
# sp-io = { version = "3.0.0", default-features = false } #, path = "../../primitives/io" }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
# sp-runtime = { version = "3.0.0", default-features = false } #, path = "../../primitives/runtime" }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }
# sp-std = { version = "3.0.0", default-features = false } #, path = "../../primitives/std" }

[dev-dependencies]
env_logger = "0.8"
hex-literal = "0.3"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"mmr-lib/std",
	"pallet-mmr-primitives/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
# runtime-benchmarks = ["frame-benchmarking"]
# try-runtime = ["frame-support/try-runtime"]
