[package]
name = "compose-register"
version = "0.1.0"
authors = ["jeflika9"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/jeflika9"
repository = "https://github.com/jeflika9/compose-substrate"
description = "Pallet for registering composable smart contracts"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# bitflags = "1.0"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# log = { version = "0.4", default-features = false }
# pwasm-utils = { version = "0.18", default-features = false }
# serde = { version = "1", optional = true, features = ["derive"] }
# smallvec = { version = "1", default-features = false, features = ["const_generics"] }
# wasmi-validation = { version = "0.4", default-features = false }

# Only used in benchmarking to generate random contract code
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
# pallet-contracts-proc-macro = { version = "3.0.0", path = "proc-macro" }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", package = "sp-io", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
sp-sandbox = { git = "https://github.com/paritytech/substrate", package = "sp-sandbox", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc-runtime-api", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", package = "pallet-identity", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false }

# [dev-dependencies]
# assert_matches = "1"
# hex-literal = "0.3"
# paste = "1"
# pretty_assertions = "0.7"
# wat = "1"

# getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = [
	# "serde",
	# "codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-sandbox/std",
	"frame-support/std",
	"frame-system/std",
	# "pwasm-utils/std",
	# "wasmi-validation/std",
	# "pallet-contracts-primitives/std",
	# "pallet-contracts-proc-macro/full",
    "pallet-contracts/std",
    "pallet-identity/std",
    "pallet-balances/std",
	# "getrandom/std"
	# "log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand",
	"rand_pcg",
	"unstable-interface",
]
try-runtime = ["frame-support/try-runtime"]
# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
unstable-interface = []
