[package]
name = "compose-primitives"
version = "0.1.0"
authors = ["jeflika9"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/jeflika9"
repository = "https://github.com/jeflika9/compose-node"
description = "A crate that holds common definitions that are relevant for the compose capability."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = "1.0"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", features = ["derive"], optional = true }

jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"

sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }

pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc"} #, default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false }


[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
    "pallet-contracts-primitives/std",
]
