[package]
name = "compose-rpc"
version = "0.1.0"
authors = ["jeflika9"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/jeflika9"
repository = "https://github.com/jeflika9/compose-node"
description = "Pallet for working with composable smart contracts via RPC"
readme = "README.md"

[dependencies]
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
serde = { version = "1.0.126", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.1.1", features = ["derive"] } #, default-features = false) }
# frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
# frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api" } #, default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", package = "sp-blockchain" } #, default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core" } #, default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", package = "sp-io" } #, default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" } #, default-features = false }
sp-rpc = { git = "https://github.com/paritytech/substrate", package = "sp-rpc"} #, default-features = false }
sp-sandbox = { git = "https://github.com/paritytech/substrate", package = "sp-sandbox" } #, default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std" } #, default-features = false }

pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts" } #, default-features = false }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc"} #, default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives" } #, default-features = false }

compose-primitives = { path = "../common", version = "0.1.0" } #, default-features = false }
compose-runtime-api = { path = "runtime-api", version = "0.1.0" } #, default-features = false }

[dev-dependencies]
serde_json = "1"

# [features]
# default = ["std"]
# std = [
# 	# "codec/std",
# 	# "frame-support/std",
# 	# "frame-system/std",
# 	# "sp-api/std",
# 	# "sp-core/std",
# 	# "sp-io/std",
# 	# "sp-runtime/std",
# 	# "sp-sandbox/std",
# 	# "sp-std/std",
# 	# "pallet-contracts/std",
# 	# "pallet-contracts-primitives/std",
# 	# "compose-primitives/std",
# 	# "compose-runtime-api/std"
# ]